--- a/styling/style.css
+++ b/styling/style.css
@@ -1,40 +1,3 @@
-body{
-    padding: 0;
-    margin:0;
-    background-color: #F0F0F0;
-}
-
-.row{
-    overflow: hidden;
-}
-
-.blocks-container.background{
-    background-color: #ffffff;
-    width: 100%;
-}
-
-.blocks-container{
-    display: inline-block;
-    width: 100%;
-}
-
-.block.title h2{
-    font-size: 30px;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 800;
-    text-transform: uppercase;
-    text-shadow: 2px 2px 8px rgba(150, 150, 150, 0.73);
-    letter-spacing: 7px;
-    margin:0px;
-}
-
-.block.text p{
-    font-family: 'Open Sans', sans-serif;
-    font-size:16px;
-    font-weight: normal;
-    margin-bottom: 0px;
-}
-
 .blocks-container.slider{
     background-image: url("../images/slider.jpg");
     background-repeat: no-repeat;
@@ -42,6 +5,16 @@ body{
     background-position: center center;
     height: 450px;
     position: relative;
+    display: block;
+}
+.blocks-container.slider{
+    background-image: url("../images/slider.jpg");
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-position: center center;
+    height: 250px;
+    position: relative;
+    display: block;
 }
 
 .blocks-container.slider::after{
@@ -96,4 +69,18 @@ body{
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     padding-left: 30px;
+}
+
+
+/*Styling succeeded page*/
+.blocks-container.succes{
+    margin-top:40px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.row.succes-page .blocks-container .block.text{
+    margin-top:30px;
 }
