--- a/styling/assets.css
+++ b/styling/assets.css
@@ -42,7 +42,7 @@ body{
 }
 
 .blocks-container.padding{
-    padding: 20px 30px;
+    padding: 20px 30px 20px 120px;
     box-sizing: border-box;
 }
 
