--- a/styling/assets.css
+++ b/styling/assets.css
@@ -41,8 +41,12 @@ body{
 
 }
 
+.title.margin{
+    margin-left:50px !important;
+    margin-bottom: 35px !important;
+}
 .blocks-container.padding{
-    padding: 20px 30px 20px 120px;
+    padding: 50px 30px 20px;
     box-sizing: border-box;
 }
 
@@ -104,7 +108,18 @@ a:hover{
 
 .block.title.left-after:before{
     content: "";
-    width: 75%;
+    width: 55%;
+    height: 100%;
+    position: absolute;
+    z-index: 1;
+    left:15%;
+    top:85%;
+    transform: translate(-50%, -50%);
+    background: #FEEDFF;
+}
+.left-after:before{
+    content: "";
+    width: 55%;
     height: 100%;
     position: absolute;
     z-index: 1;
@@ -130,4 +145,30 @@ a{
 }
 .link:hover{
     color: #f8c5ff;
+}
+
+label{
+    font-family: 'Open Sans', sans-serif;
+    font-size:14px;
+    font-weight: bold;
+}
+
+label:after{
+    content: "*";
+    color: #fac8fd;
+    margin-left:5px;
+}
+
+select, input{
+    display: block;
+    border: 1px solid #212121;
+    border-radius:5px;
+    box-sizing: border-box;
+    padding: 5px 10px;
+    height: 30px;
+    font-family: 'Open Sans', sans-serif;
+    font-size:14px;
+    font-weight: 300;
+    color:#9A9A9A;
+    background: #ffffff;
 }
